# MindbreakCtf2025

./: README.md
gotmail/: .gitignore  CMakeLists.txt  Dockerfile  README.md  build.sh  build_docker.sh  docker-compose.yml  flag.txt  gotmail  launch_challenge.sh
gotmail/src/: includes.h  main.c  utils.c
seedSpy/: .gitignore  Dockerfile  README.md  build_docker.sh  docker-compose.yml  flag.txt  nginx.conf  package.json
spaceUrl/: .gitignore  Dockerfile  build_docker.sh  flag.txt  requirements.txt  venv.sh
spaceUrl/app/: __init__.py  database.py  server.py
spaceUrl/app/static/: index.js
spaceUrl/app/templates/: base.html  file.html  index.html
